kubernetes_class/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "goserver"
  labels:
    app: "goserver"
spec:
  selector:
    matchLabels:
      app: "goserver"
  replicas: 2
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
        - name: "goserver"
          image: "gabrielggs/hellogo:v6"
          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
          # env:
          #   - name: NAME
          #     valueFrom:
          #       configMapKeyRef:
          #         name: "goserver-env"
          #         key: NAME
          #   - name: AGE
          #     valueFrom:
          #       configMapKeyRef:
          #         name: "goserver-env"
          #         key: AGE
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: config
          configMap:
            name: goserver-family
            items:
            - key: members
              path: "family.txt"
